# HeroesSceneSwitch

./: CMakeLists.txt  HeroesSceneSwitch.cpp  HeroesSceneSwitch.h  README.md  TestPlugin.cpp  TestPlugin.h  readme.md  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Release/: ReadMe.txt
